--- a/challenge_4/public/styles.css
+++ b/challenge_4/public/styles.css
@@ -4,7 +4,8 @@ table {
 }
 
 td {
-  height: 1em;
-  width: 1em;
+  height: 1.5em;
+  width: 30px;
   border: 1px solid black;
+  text-align: center;
 }
